--- a/angular/.travis.yml
+++ b/angular/.travis.yml
@@ -9,7 +9,12 @@ before_script: # commands to run before the build step
 script: # the build step
    - ng build --prod
 
+after_success:
+  - firebase deploy --token $FIREBASE_TOKEN --non-interactive # firebase deploy after angular-cli build
+
 notifications:
   email: # only receive email when the build status changes (someone broke the build!) 
     on_failure: change
     on_success: change   
+
+    
