--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: node_js
 
+
 node_js:
    - node # will use latest node
 
-before_script: # commands to run before the build step
-   - npm install -g --silent @angular/cli
+before_script:  
+    - cd angular # commands to run before the build step
+    - npm install -g --silent @angular/cli
 
 script: # the build step
+ 
    - ng build --prod
 
 after_success:
