--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,12 @@ language: node_js
 node_js:
    - node # will use latest node
 
-before_script:  
-    - cd angular # commands to run before the build step
-    - npm install -g --silent @angular/cli
+before_script: # commands to run before the build step
+    - cd ./angular && npm install -g --silent @angular/cli
 
 script: # the build step
  
-   - ng build --prod
+   - cd ./angular && ng build --prod
 
 after_success:
   - firebase deploy --token $FIREBASE_TOKEN --non-interactive # firebase deploy after angular-cli build
