--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ before_script: # commands to run before the build step
     - cd ./angular && npm install -g --silent @angular/cli
 
 script: # the build step
- 
-   - cd ./angular && ng build --prod
+   - ng build --prod
 
 after_success:
   - firebase deploy --token $FIREBASE_TOKEN --non-interactive # firebase deploy after angular-cli build
