--- a/angular/.travis.yml
+++ b/angular/.travis.yml
@@ -1,27 +1,23 @@
 language: node_js
 
-
 node_js:
-   - node # will use latest node
-
+   - node
 
 branches:
    only:
       - master # will only build for master branch commits
 
-before_script: # commands to run before the build step
+before_script:
    - cd ./angular && npm install -g --silent firebase-tools # installs firebase to run firebase deploy
-    - cd ./angular && npm install -g --silent @angular/cli
+   - cd ./angular && npm install -g --silent @angular/cli
 
-script: # the build step
+script:
    - ng build --prod
 
 after_success:
   - firebase deploy --token $FIREBASE_TOKEN --non-interactive # firebase deploy after angular-cli build
 
 notifications:
-  email: # only receive email when the build status changes (someone broke the build!) 
+  email:
     on_failure: change
     on_success: change   
-
-    
