--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,8 @@ after_success:
   - test $TRAVIS_BRANCH = "master" && test $TRAVIS_PULL_REQUEST = "false" && firebase deploy --token $FIREBASE_TOKEN --non-interactive
 notifications:
   email:
+  recipients:
+      - quangpham6688@gmail.com
+      - quang.pham@axonactive.com
     on_failure: change
     on_success: change   
